objects/NeustarConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for Neustar configuration</description>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password used to authenticate with Neustar service</description>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_ID__c</fullName>
        <description>Service ID used to authenticate with Neustar service</description>
        <label>Service ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username to authenticate with Neustar service</description>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Neustar Config</label>
</CustomObject>